--- a/src/Mazenovi/TodoMVCBundle/Resources/views/layout.html.twig
+++ b/src/Mazenovi/TodoMVCBundle/Resources/views/layout.html.twig
@@ -42,7 +42,7 @@
         </div>
 
         <div id="todos">
-          <input class="check mark-all-done" type="checkbox"/>
+          <input class="check mark-all-done" id="mark-all-as-done" type="checkbox"/>
           <label for="check-all">Mark all as complete</label>
           <ul id="todo-list"></ul>
         </div>
