--- a/src/Mazenovi/TodoMVCBundle/Resources/views/Api/index.html.twig
+++ b/src/Mazenovi/TodoMVCBundle/Resources/views/Api/index.html.twig
@@ -1,1 +1,12 @@
-{% extends "MazenoviTodoMVCBundle::layout.html.twig" %}
+{% extends "MazenoviTodoMVCBundle::list.html.twig" %}
+
+{% block mark_all %}
+
+  {#% if is_granted('ROLE_ADMIN') %#}
+      
+    <input id="toggle-all" type="checkbox">
+    <label for="toggle-all">Mark all as complete</label>
+
+  {#% endif %#}
+
+{% endblock mark_all %}
