add correct utl to fb auth

--- a/src/Mazenovi/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Mazenovi/UserBundle/Resources/views/Security/login.html.twig
@@ -19,15 +19,15 @@
 		Authentification
 		<ul>
 			<li>
-				<a data-toggle="tab" href="#login2">
-					<img class="icon16" src="https://hwiconnect.net/img/social/google_16.png">
-					Google
+				<a data-toggle="tab" href="/connect/facebook">
+					<img class="icon16" src="https://hwiconnect.net/img/social/facebook_16.png">
+					Facebook
 				</a>
 			</li>
 			<li>
-				<a data-toggle="tab" href="#login3">
-					<img class="icon16" src="https://hwiconnect.net/img/social/facebook_16.png">
-					Facebook
+				<a data-toggle="tab" href="#login2">
+					<img class="icon16" src="https://hwiconnect.net/img/social/google_16.png">
+					Google
 				</a>
 			</li>
 			<li>
