get the fb auth link working on login page

--- a/src/Mazenovi/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Mazenovi/UserBundle/Resources/views/Security/login.html.twig
@@ -19,37 +19,37 @@
 		Authentification
 		<ul>
 			<li>
-				<a data-toggle="tab" href="/connect/facebook">
+				<a href="/connect/facebook">
 					<img class="icon16" src="https://hwiconnect.net/img/social/facebook_16.png">
 					Facebook
 				</a>
 			</li>
 			<li>
-				<a data-toggle="tab" href="#login2">
+				<a href="#login2">
 					<img class="icon16" src="https://hwiconnect.net/img/social/google_16.png">
 					Google
 				</a>
 			</li>
 			<li>
-				<a data-toggle="tab" href="#login4">
+				<a href="#login4">
 					<img class="icon16" src="https://hwiconnect.net/img/social/windows_16.png">
 					Windows Live
 				</a>
 			</li>
 			<li>
-				<a data-toggle="tab" href="#login5">
+				<a href="#login5">
 					<img class="icon16" src="https://hwiconnect.net/img/social/github_16.png">
 					GitHub
 				</a>
 			</li>
 			<li>
-				<a data-toggle="tab" href="#login6">
+				<a href="#login6">
 					<img class="icon16" src="https://hwiconnect.net/img/social/twitter_16.png">
 					Twitter
 				</a>
 			</li>
 			<li>
-				<a data-toggle="tab" href="#login7">
+				<a href="#login7">
 					<img class="icon16" src="https://hwiconnect.net/img/social/linkedin_16.png">
 					LinkedIn
 				</a>
