Wsse Authentication used by JavaScript

--- a/src/Mazenovi/TodoMVCBundle/Resources/views/list.html.twig
+++ b/src/Mazenovi/TodoMVCBundle/Resources/views/list.html.twig
@@ -18,6 +18,20 @@
   <script type="text/javascript" src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
   <script src="/bundles/mazenovitodomvc/js/base.js"></script>
   <script data-main="/bundles/mazenovitodomvc/js/main" src="/bundles/manymulesrequirejs/js/require.min.js"></script>
+  <script>
+  {% if app.user.username is defined %}
+    var Username = '{{ app.user.username }}';
+  {% endif %}
+  {% if app.session.has('Nonce') %}
+    var Nonce = '{{ app.session.get('Nonce') }}';
+  {% endif %}
+  {% if app.session.has('Created') %}
+    var Created = '{{ app.session.get('Created') }}';
+  {% endif %}
+  {% if app.session.has('Nonce') %}
+    var PasswordDigest = '{{ app.session.get('PasswordDigest') }}';
+  {% endif %}
+  </script>
 {% endblock head_script %}
 
 {% block content_title %}Todos{% endblock content_title %}
