a try to implement acl in ui

--- a/src/Mazenovi/TodoMVCBundle/Resources/public/js/templates/users.html
+++ b/src/Mazenovi/TodoMVCBundle/Resources/public/js/templates/users.html
@@ -1,3 +1,2 @@
 
-<a href="<%= Routing.generate('mazenovi_todomvc_api_listuser', {id: id}) %>" class="author" rel="author"><%- username %></a>
-<div id="user_roles"><%- roles %></div>
+<a href="<%= Routing.generate('mazenovi_todomvc_api_listuser', {id: id}) %>" class="author" rel="author"><%= username %></a>
