--- a/src/Mazenovi/TodoMVCBundle/Resources/public/js/templates/stats.html
+++ b/src/Mazenovi/TodoMVCBundle/Resources/public/js/templates/stats.html
@@ -1,15 +1,15 @@
-<span id="todo-count"><strong><%= remaining %></strong> <%= remaining == 1 ? 'item' : 'items' %> left</span>
+<span id="todo-count"><strong><%= remaining %></strong> <%= remaining == 1 ? 'item' : 'items' %> of mine left</span>
 <ul id="filters">
 	<li>
 		<a class="selected" href="#/">All</a>
 	</li>
 	<li>
-		<a href="#/active">Active</a>
+		<a href="#/active">My Active</a>
 	</li>
 	<li>
-		<a href="#/completed">Completed</a>
+		<a href="#/completed">My Completed</a>
 	</li>
 </ul>
 <% if ( completed ) { %>
-<button id="clear-completed">Clear completed (<%= completed %>)</button>
+<button id="clear-completed">Clear my completed (<%= completed %>)</button>
 <% } %>
