--- a/src/Mazenovi/TodoMVCBundle/Resources/views/Navbar/navbar.html.twig
+++ b/src/Mazenovi/TodoMVCBundle/Resources/views/Navbar/navbar.html.twig
@@ -11,7 +11,7 @@
             </a>
             
             {% if navbar.hasOption('title') %}
-                <a class="brand" href="{{ path(navbar.getOption('titleRoute')) }}">{{ navbar.getOption('title') }}</a>
+                <a class="brand" href="{{ path(navbar.getOption('titleRoute')) }}"><i class="icon-cloud"></i>{{ navbar.getOption('title') }}</a>
             {% endif %}
             <div class="nav-collapse">
                 {{ navbar.hasMenu('leftmenu') ? knp_menu_render(navbar.getMenu('leftmenu'), {'currentClass': 'active', 'ancestorClass': 'active', 'allow_safe_labels': 'true'}) : '' }}
