--- a/src/Mazenovi/TodoMVCBundle/Resources/views/layout.html.twig
+++ b/src/Mazenovi/TodoMVCBundle/Resources/views/layout.html.twig
@@ -82,7 +82,7 @@
     To speed up page loads save a copy of jQuery in your project and override this block to include the correct path
     Otherwise the regeneration is done on every load in dev more with use_controller: true
      #}
-    {% javascripts
+    {#% javascripts
         'http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'
         '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-transition.js'
         '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-modal.js'
@@ -101,7 +101,7 @@
          filter='yui_js'
     %}
     <script type="text/javascript" src="{{ asset_url }}"></script>
-    {% endjavascripts %}
+    {% endjavascripts %#}
     {% endblock foot_script %}
 
 {% endblock body %}
