--- a/src/Mazenovi/TodoMVCBundle/Resources/views/layout.html.twig
+++ b/src/Mazenovi/TodoMVCBundle/Resources/views/layout.html.twig
@@ -9,28 +9,23 @@
 {% block head %}
 <head>
     <meta charset="UTF-8" />
+
     {% block head_style %}
 
-        {% stylesheets '@MopaBootstrapBundle/Resources/public/less/mopabootstrapbundle.less' %}
-            <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
-        {% endstylesheets %}
-        <link rel="stylesheet" href="/bundles/mazenovitodomvc/css/base.css">
-
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/bundles/mazenovitodomvc/css/all.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">        
     
     {% endblock head_style %}
 
     {% block head_script %}
 
-        {% javascripts  '@ManyMulesJQueryBundle/Resources/public/js/jquery.js' filter='yui_js' %}
-                <script src="{{ asset_url }}"></script>
-        {% endjavascripts %}
+        <script src="/bundles/manymulesjquery/js/jquery.min.js"></script>
     
     {% endblock head_script %}
 
     <title>{% block title %}Backbone.js{% endblock title %}</title>
     
-    <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
+    <link rel="shortcut icon" href="favicon.ico" />
     
     {% block head_bottom %}
     {% endblock head_bottom %}
@@ -78,30 +73,6 @@
     {% endblock container %}
 
     {% block foot_script %}
-    {# To only use a subset or add more js overwrite and copy paste this block
-    To speed up page loads save a copy of jQuery in your project and override this block to include the correct path
-    Otherwise the regeneration is done on every load in dev more with use_controller: true
-     #}
-    {#% javascripts
-        'http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-transition.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-modal.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-dropdown.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-scrollspy.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-tab.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-tooltip.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-popover.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-alert.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-button.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-collapse.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-carousel.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-typeahead.js'
-        '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-collection.js'
-        '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-subnav.js'
-         filter='yui_js'
-    %}
-    <script type="text/javascript" src="{{ asset_url }}"></script>
-    {% endjavascripts %#}
     {% endblock foot_script %}
 
 {% endblock body %}
