fix cached routing

--- a/src/Mazenovi/TodoMVCBundle/Resources/views/list.html.twig
+++ b/src/Mazenovi/TodoMVCBundle/Resources/views/list.html.twig
@@ -9,7 +9,7 @@
   {% else %}
     <script src="/bundles/mazenovitodomvc/js/build/require.js"></script>
     <script>
-      fos.Router.setData({"base_url":"\/app_dev.php","routes":{"mazenovi_todomvc_api_index":{"tokens":[["text","\/todos\/"]],"defaults":[]},"mazenovi_todomvc_api_listuser":{"tokens":[["text","\/todos\/"],["variable","\/","\\d+","id"],["text","\/users"]],"defaults":[]},"mazenovi_user_api_getme":{"tokens":[["text","\/todos\/users\/me"]],"defaults":[]}}});
+      fos.Router.setData({"base_url":"","routes":{"mazenovi_todomvc_api_index":{"tokens":[["text","\/todos\/"]],"defaults":[]},"mazenovi_todomvc_api_listuser":{"tokens":[["text","\/todos\/"],["variable","\/","\\d+","id"],["text","\/users"]],"defaults":[]},"mazenovi_user_api_getme":{"tokens":[["text","\/todos\/users\/me"]],"defaults":[]}}});
     </script>
   {% endif %}
 
